samples/_failures_safe/1761336851_150a28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ea992e8.c: In function ‘main’:
./samples/SAFE/__tmp_2ea992e8.c:165:13: error: expected declaration or statement at end of input
  165 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_2ea992e8.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ea992e8.c:165:13: error: expected declaration or statement at end of input
